new logo, sound functionality, data localization, fixes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,8 @@
   "HoldText": "Hold",
   "ExhaleText": "Exhale",
   "CycleLabel": "Cycle",
-  "FinishText": "Finish"
+  "FinishText": "Finish",
+  "TipsHeader": "Tips",
+  "DescriptionHeader": "Description",
+  "LocaleTitle": "EN"
 }
