--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,5 +4,8 @@
   "HoldText": "Задержка",
   "ExhaleText": "Выдох",
   "CycleLabel": "Цикл",
-  "FinishText": "Завершить"
+  "FinishText": "Завершить",
+  "TipsHeader": "Особенности",
+  "DescriptionHeader": "Описание",
+  "LocaleTitle": "RU"
 }
