Added 'How To' and 'Duration' for breathing exercises

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,5 +7,6 @@
   "FinishText": "Finish",
   "TipsHeader": "Tips",
   "DescriptionHeader": "Description",
+  "HowToHeader": "How to breathe",
   "LocaleTitle": "EN"
 }
