--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,5 +7,6 @@
   "FinishText": "Завершить",
   "TipsHeader": "Особенности",
   "DescriptionHeader": "Описание",
+  "HowToHeader": "Как дышать",
   "LocaleTitle": "RU"
 }
